adicionando conteudo da tela de sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -3,6 +3,46 @@
 <body>
 <div id="body" class="container">
     <h2 id="titulo">Sponsors</h2>
+    <h2 class="ml-2">FUSION 2025 Sponsorship opportunities</h2>
+    <div class="text pl-2">
+      <p>
+        The 28th International Conference on Information Fusion (FUSION 2025) is providing a scientific forum for researchers and practitioners from academia, industry, and government agencies to discuss the latest advancements on classical model-based and emerging data-driven autonomous methodologies on sensor, data, information and knowledge fusion, new system frameworks, hybrid processing techniques, and the associated challenges at the systemic level, including system design paradigms and issues of system control, management, test, and evaluation.
+      </p>
+      <p>
+        Being a prestigious conference, FUSION draws in leading researchers and influencers from academia and industry.
+      </p>
+      <p>
+        FUSION presents a distinctive opportunity to engage with scientists who are shaping the next generation of techniques and to gain insights into both the current state-of-the-art and future research trajectories. Moreover, FUSION offers the chance to network with and recruit top Ph.D. students, making it an ideal platform to enhance your organization’s visibility among globally influential thought leaders. Sponsors stand to gain extensive exposure to this community through conference promotion, activities during the event, and the possibility of synergies with other industry partners.
+      </p>
+      <p>
+        We eagerly anticipate your participation in FUSION 2025 which will be hosted in Rio de Janeiro, Brazil, and encourage you to explore the advantages of sponsoring FUSION 2025.
+      </p>
+    </div>
+
+    <h2 class="ml-2">Benefits of Supporting FUSION 2025</h2>
+    <div class="text pl-2">
+      <ul>
+        <li>Acknowledgement of your organisation’s support leading up to and during the conference</li>
+        <li>Networking opportunities during the conference to promote your products and services to specialists and graduate students</li>
+        <li>A showcase for your brand in support of researchers in this key scientific and industrial field</li>
+        <li>An opportunity to establish contacts and strengthen relationships with the leading researchers and institutions from around the world</li>
+        <li>Access to conference delegates for recruiting and promoting mind share of your organisation’s brand</li>
+        <li>A place and time for your researchers and management to connect face-to-face with the most influential people in this field in a setting especially conducive to learning and exploration of future opportunities</li>
+      </ul>
+
+      <p>There are three levels of sponsorship opportunities and the Sponsorship Chairs are happy to discuss more specific sponsorship opportunities. All conference sponsors receive the following standard benefits:</p>
+
+      <ul>
+        <li>Recognition as a supporter (with your logo) in the conference program</li>
+        <li>Recognition as a supporter (with your logo) on the supporters’ page of the official conference website, including a hyperlink to your organisation’s home page</li>
+        <li>Acknowledgement as a supporter on the official audiovisual material used at the virtual conference (e.g., announcements in business sessions and logo in official virtual backgrounds)</li>
+      </ul>
+
+      <p>Added Benefits of the different levels of sponsorship are outlined in the table below:</p>
+      <p>To be announced</p>
+      <p style="font-weight: bolder;">For more details please contact us at Cmicelifarias@gmail.com.</p>
+    </div>
+
         <div>
             <h2 class="ml-2">Principal Sponsors</h2>
             <div class="imagens">
@@ -11,29 +51,29 @@
                 <a href="https://www.ieee.org/" target="_blank"><img  src="assets/sponsors/bronzeFinancial/IEEE.svg" alt="Imagem 3"></a>
             </div>
           </div>
-          <div>
+          <!-- <div>
             <h2 class="ml-2">Academic Sponsors</h2>
             <div class="imagens">
                 <a href="https://isif.org/" target="_blank"><img src="assets/sponsors/bronzeFinancial/ISIF.svg" alt="Imagem 4"></a>
                 <a href="https://ieee-aess.org/" target="_blank"><img src="assets/sponsors/bronzeFinancial/AESS.svg" alt="Imagem 5"></a>
                 <a href="https://www.ieee.org/" target="_blank"><img  src="assets/sponsors/bronzeFinancial/IEEE.svg" alt="Imagem 6"></a>
             </div>
-          </div>
-          <div>
+          </div> -->
+          <!-- <div>
             <h2 class="ml-2">Bronze Financial Sponsors</h2>
             <div class="imagens">
                 <a href="https://isif.org/" target="_blank"><img src="assets/sponsors/bronzeFinancial/ISIF.svg" alt="Imagem 7"></a>
                 <a href="https://ieee-aess.org/" target="_blank"><img src="assets/sponsors/bronzeFinancial/AESS.svg" alt="Imagem 8"></a>
                 <a href="https://www.ieee.org/" target="_blank"><img  src="assets/sponsors/bronzeFinancial/IEEE.svg" alt="Imagem 9"></a>
             </div>
-          </div>
-          <div>
+          </div> -->
+          <!-- <div>
             <h2 class="ml-2">Awards Sponsors</h2>
             <div class="imagens">
                 <a href="https://isif.org/" target="_blank"><img src="assets/sponsors/bronzeFinancial/ISIF.svg" alt="Imagem 10"></a>
                 <a href="https://ieee-aess.org/" target="_blank"><img src="assets/sponsors/bronzeFinancial/AESS.svg" alt="Imagem 11"></a>
                 <a href="https://www.ieee.org/" target="_blank"><img  src="assets/sponsors/bronzeFinancial/IEEE.svg" alt="Imagem 12"></a>
             </div>
-          </div>
+          </div> -->
 </div>
 </body>
