adicionando novas fotos e corrigindo informações dos membros

--- a/organization.html
+++ b/organization.html
@@ -11,10 +11,10 @@
             <div class="headerCard">
                 <div class="circuloBranco"></div>
             </div>
-            <div class="contentCard">
-                <img src="assets/organization/generalChairs/claudioMiceli.jfif" alt="Claudio Miceli de Farias">
+            <div class="contentCard text">
+                <img src="assets/organization/generalChairs/claudio-miceli.jpeg" alt="Claudio Miceli de Farias">
                 <h2>Claudio Miceli de Farias</h2>
-                <p>Federal University of Rio de Janeiro</p>
+                <label>Federal University of Rio de Janeiro</label>
                 <p>Brazil</p>
             </div>
             <div class="footerCard"></div>  
@@ -23,11 +23,11 @@
             <div class="headerCard">
                 <div class="circuloBranco"></div>
             </div>
-            <div class="contentCard">
-                <img src="assets/organization/generalChairs/pauloCosta.jfif" alt="Paulo Costa">
+            <div class="contentCard text">
+                <img src="assets/organization/generalChairs/paulo-costa.jpeg" alt="Paulo Costa">
                 <h2>Paulo Costa</h2>
-                <p>Federal University of Rio de Janeiro</p>
-                <p>Brazil</p>
+                <label>George Mason University</label>
+                <p>USA</p>
             </div>
             <div class="footerCard"></div>  
         </div>
