adicionando tabela de sponsorships

--- a/sponsors.html
+++ b/sponsors.html
@@ -39,8 +39,56 @@
       </ul>
 
       <p>Added Benefits of the different levels of sponsorship are outlined in the table below:</p>
-      <p>To be announced</p>
-      <p style="font-weight: bolder;">For more details please contact us at Cmicelifarias@gmail.com.</p>
+      
+      <div class="card-container">
+        <div class="card">
+          <div class="card-header">
+              <p>Bronze</p>
+              <p>US$ To be announced</p>
+          </div>
+          <div class="card-body">
+            <p>To be announced</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+              <p>Silver</p>
+              <p>US$ To be announced</p>
+          </div>
+          <div class="card-body">
+            <p>To be announced</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+              <p>Gold</p>
+              <p>US$ To be announced</p>
+          </div>
+          <div class="card-body">
+            <p>To be announced</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+              <p>Platinum</p>
+              <p>US$ To be announced</p>
+          </div>
+          <div class="card-body">
+            <p>To be announced</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+              <p>Diamond</p>
+              <p>US$ To be announced</p>
+          </div>
+          <div class="card-body">
+            <p>To be announced</p>
+          </div>
+        </div>
+    </div>
+
+      <p>For more details please contact us at Cmicelifarias@cos.ufrj.br.</p>
     </div>
 
         <div>
