adicionando bento do othon palace e suas imagens

--- a/venue-e-travel.html
+++ b/venue-e-travel.html
@@ -34,7 +34,32 @@
           Nulla tincidunt dictum nulla, in cursus ex vestibulum ut. Maecenas consequat eget tortor ac pellentesque. Morbi nibh tortor, tincidunt quis mollis eget, placerat in erat. Sed ultrices dictum nibh id efficitur. Donec sit amet vulputate ante. Phasellus dapibus dignissim elit. Nunc id vestibulum sem. Suspendisse potenti. 
         </p>
       </div>
-      <img id="hotelOthonFotos" src="assets/others/othonPalace.png" alt="Othon Palace">
+      <!-- <img id="hotelOthonFotos" src="assets/others/othonPalace.png" alt="Othon Palace"> -->
+      <div class="bento">
+        <div class="bento__container" variant-2>
+          <div class="bento__item" style="--columns: span 2;">
+            <img src="assets/bento/bento1.jpg" alt="Othon Palace ">
+          </div>
+          <div class="bento__item" style="--columns: span 2;">
+            <img src="assets/bento/bento2.jpg" alt="Othon Palace">
+          </div>
+          <div class="bento__item">
+            <img  src="assets/bento/bento3.jpeg" alt="Othon Palace">
+          </div>
+          <div class="bento__item" style="--columns: span 2;">
+            <img src="assets/bento/bento4.jpg" alt="Othon Palace">
+          </div>
+          <div class="bento__item">
+            <img src="assets/bento/bento5.jpg" alt="Othon Palace">
+          </div>
+          <div class="bento__item" style="--columns: span 2;">
+            <img src="assets/bento/bento6.jpg" alt="Othon Palace">
+          </div>
+          <div class="bento__item" style="--columns: span 2;">
+            <img src="assets/bento/bento7.jpg" alt="Othon Palace">
+          </div>
+        </div>
+      </div>
       <div class="col">
         <h2>Coming from Santos Dummont Airport</h2>
         <p class="text pl-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.</p>
