adicionando valores e vantagens dos niveis de patrocinios, junto de alteracao na estilizacao de email para contato

--- a/sponsors.html
+++ b/sponsors.html
@@ -44,61 +44,93 @@
         <div class="card">
           <div class="card-header">
               <p>Bronze</p>
-              <p>US$ To be announced</p>
+              <p>US$ 3,000</p>
           </div>
           <div class="card-body">
-            <p>To be announced</p>
+            <p>Logo on website, booklet, and presentation slide during opening/closing</p>
+            <p>1 full conference registration</p>
           </div>
         </div>
         <div class="card">
           <div class="card-header">
               <p>Silver</p>
-              <p>US$ To be announced</p>
+              <p>US$ 6,000</p>
           </div>
           <div class="card-body">
-            <p>To be announced</p>
+            <p>Logo on website, booklet, and presentation slide during opening/closing</p>
+            <p>2 full conference registrations</p>
+            <p>Logo on conference signage</p>
+            <p>Exhibitor table</p>
           </div>
         </div>
         <div class="card">
           <div class="card-header">
               <p>Gold</p>
-              <p>US$ To be announced</p>
+              <p>US$ 10,000</p>
           </div>
           <div class="card-body">
-            <p>To be announced</p>
+            <p>Logo on website, booklet, and presentation slide during opening/closing</p>
+            <p>3 full conference registrations</p>
+            <p>Logo on conference signage</p>
+            <p>Exhibitor table</p>
+            <p>Verbal acknowledgment at conference opening/closing</p>
+            <p>15 sec video before keynote presentations</p>
+            <p>Opportunity to be identified as a sponsor of an award or a conference event (e.g., lunch, coffee breaks, banquet, workshops, etc.)**</p>
           </div>
         </div>
         <div class="card">
           <div class="card-header">
               <p>Platinum</p>
-              <p>US$ To be announced</p>
+              <p>US$ 15,000</p>
           </div>
           <div class="card-body">
-            <p>To be announced</p>
+            <p>Logo on website, booklet, and presentation slide during opening/closing</p>
+            <p>4 full conference registrations</p>
+            <p>Logo on conference signage</p>
+            <p>Exhibitor table</p>
+            <p>Verbal acknowledgment at conference opening/closing</p>
+            <p>30 sec video before keynote presentations</p>
+            <p>Opportunity to be identified as a sponsor of an award or a conference event (e.g., lunch, coffee breaks, banquet, workshops, etc.)**</p>
+            <p>Access to email address of conference attendees who opts-in to receive email from conference sponsors***</p>
+            <p>Sponsor flier provided to all attendees</p>
+            <p>Half page company advertisement in the conference program booklet</p>
+            <p>Exclusive opportunity (maximum 4 spots)</p>
           </div>
         </div>
         <div class="card">
           <div class="card-header">
               <p>Diamond</p>
-              <p>US$ To be announced</p>
+              <p>US$ 30,000</p>
           </div>
           <div class="card-body">
-            <p>To be announced</p>
+            <p>Logo on website, booklet, and presentation slide during opening/closing</p>
+            <p>6 full conference registrations</p>
+            <p>Logo on conference signage</p>
+            <p>Exhibitor table</p>
+            <p>Verbal acknowledgment at conference opening/closing</p>
+            <p>60 sec video before keynote presentations</p>
+            <p>Opportunity to be identified as a sponsor of an award or a conference event (e.g., lunch, coffee breaks, banquet, workshops, etc.)**</p>
+            <p>Access to email address of conference attendees who opts-in to receive email from conference sponsors***</p>
+            <p>Sponsor flier provided to all attendees</p>
+            <p>1 page company advertisement in the conference program booklet</p>
+            <p>Exclusive opportunity (maximum 1)</p>
           </div>
         </div>
     </div>
-
-      <p>For more details please contact us at Cmicelifarias@cos.ufrj.br.</p>
-    </div>
-
-        <div>
-            <h2 class="ml-2">Principal Sponsors</h2>
-            <div class="imagens">
-                <a href="https://isif.org/" target="_blank"><img src="assets/sponsors/bronzeFinancial/ISIF.svg" alt="Imagem 1"></a>
-                <a href="https://ieee-aess.org/" target="_blank"><img src="assets/sponsors/bronzeFinancial/AESS.svg" alt="Imagem 2"></a>
-                <a href="https://www.ieee.org/" target="_blank"><img  src="assets/sponsors/bronzeFinancial/IEEE.svg" alt="Imagem 3"></a>
-            </div>
-          </div>
+    
+    <p>1. * It includes invitation for one sponsor representative to attend the PhD Symposium</p>
+    <p>2. ** Additional cost to be discussed</p>
+    <p>3. *** People who opt-in as part of the conference registration must be allowed to opt-out at anytime subsequently</p>  
+    <p class="link">For more details please contact us at <a href="mailto:cmicelifarias@cos.ufrj.br">Cmicelifarias@cos.ufrj.br</a>.</p>  
+  </div>      
+  <div>      
+    <h2 class="ml-2">Principal Sponsors</h2>        
+    <div class="imagens">
+      <a href="https://isif.org/" target="_blank"><img src="assets/sponsors/bronzeFinancial/ISIF.svg" alt="Imagem 1"></a>      
+      <a href="https://ieee-aess.org/" target="_blank"><img src="assets/sponsors/bronzeFinancial/AESS.svg" alt="Imagem 2"></a>       
+      <a href="https://www.ieee.org/" target="_blank"><img  src="assets/sponsors/bronzeFinancial/IEEE.svg" alt="Imagem 3"></a>     
+    </div>     
+  </div>
           <!-- <div>
             <h2 class="ml-2">Academic Sponsors</h2>
             <div class="imagens">
