--- a/sponsors.html
+++ b/sponsors.html
@@ -6,16 +6,16 @@
     <h2 class="ml-2">FUSION 2025 Sponsorship opportunities</h2>
     <div class="text pl-2">
       <p>
-        The 28th International Conference on Information Fusion (FUSION 2025) is providing a scientific forum for researchers and practitioners from academia, industry, and government agencies to discuss the latest advancements on classical model-based and emerging data-driven autonomous methodologies on sensor, data, information and knowledge fusion, new system frameworks, hybrid processing techniques, and the associated challenges at the systemic level, including system design paradigms and issues of system control, management, test, and evaluation.
+        The 28th International Conference on Information Fusion (FUSION 2025) serves as a significant platform for researchers and practitioners across academia, industry, and government sectors. It focuses on advancing classical model-based approaches and emerging data-driven autonomous methodologies in sensor, data, information, and knowledge fusion. Discussions also encompass new system frameworks, hybrid processing techniques, and systemic challenges such as system design paradigms, control, management, testing, and evaluation.
       </p>
-      <p>
+      <!-- <p>
         Being a prestigious conference, FUSION draws in leading researchers and influencers from academia and industry.
+      </p> -->
+      <p>
+        FUSION attracts leading researchers and influencers from academia and industry, offering a unique opportunity to engage with those shaping the future of research techniques. Participants gain insights into current advancements and future research directions. The conference is also an ideal venue for networking and recruiting top Ph.D. talent, enhancing organizational visibility among global thought leaders.
       </p>
       <p>
-        FUSION presents a distinctive opportunity to engage with scientists who are shaping the next generation of techniques and to gain insights into both the current state-of-the-art and future research trajectories. Moreover, FUSION offers the chance to network with and recruit top Ph.D. students, making it an ideal platform to enhance your organization’s visibility among globally influential thought leaders. Sponsors stand to gain extensive exposure to this community through conference promotion, activities during the event, and the possibility of synergies with other industry partners.
-      </p>
-      <p>
-        We eagerly anticipate your participation in FUSION 2025 which will be hosted in Rio de Janeiro, Brazil, and encourage you to explore the advantages of sponsoring FUSION 2025.
+        Sponsors can leverage extensive exposure through conference promotions, event activities, and potential synergies with industry partners. We look forward to your participation at FUSION 2025 in Rio de Janeiro, Brazil, and invite you to consider the benefits of sponsoring FUSION 2025.
       </p>
     </div>
 
@@ -30,7 +30,7 @@
         <li>A place and time for your researchers and management to connect face-to-face with the most influential people in this field in a setting especially conducive to learning and exploration of future opportunities</li>
       </ul>
 
-      <p>There are three levels of sponsorship opportunities and the Sponsorship Chairs are happy to discuss more specific sponsorship opportunities. All conference sponsors receive the following standard benefits:</p>
+      <p>There are five levels of sponsorship opportunities and the Sponsorship Chairs are happy to discuss more specific sponsorship opportunities. All conference sponsors receive the following standard benefits:</p>
 
       <ul>
         <li>Recognition as a supporter (with your logo) in the conference program</li>
