alterando email de contato na pagina Sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -121,7 +121,7 @@
     <p>1. * It includes invitation for one sponsor representative to attend the PhD Symposium</p>
     <p>2. ** Additional cost to be discussed</p>
     <p>3. *** People who opt-in as part of the conference registration must be allowed to opt-out at anytime subsequently</p>  
-    <p class="link">For more details please contact us at <a href="mailto:cmicelifarias@cos.ufrj.br">Cmicelifarias@cos.ufrj.br</a>.</p>  
+    <p class="link">For more details please contact us at <a href="mailto:fusion2025@labnet.nce.ufrj.br">fusion2025@labnet.nce.ufrj.br</a>.</p>  
   </div>      
   <div>      
     <h2 class="ml-2">Principal Sponsors</h2>        
