adicionando conteudo da home das telas dos call's e o menu suspenso em call for contributions

--- a/home.html
+++ b/home.html
@@ -27,6 +27,24 @@
       </div>
       <div class="text pl-2">
         <p>
+          Rio de Janeiro, Brazil, will host the 28th ISIF Fusion Conference from July 7-10, 2025, the first ever in South America. Rio de Janeiro never fails to impress with its modern outlook that reflects its progression through the times of yore. The historic sites, sparkling beaches, green belts and cheerful attitude of the locals attract tourists where heaven meets earth. If Ronaldo played football at the Maracanã stadium, then Christ the Redeemer put Rio on the world map. Rio's carnival, with its energetic samba dancers jiggling their hips, attracts thousands of tourists from around the world. The rain-forests, museums, beaches, gardens and the glitz of the city have made Rio what it is today Brazil's top-notch tourist destination. 
+        </p>
+        <p>
+          The venue is at the center of the touristic zone of Rio de Janeiro in front of some of the most famous beaches - Copacabana. It provides excellent facilities, first-rate service levels, and all the additional amenities expected in major hotels, including easy access to various attractions - such as the Sugar Loaf, Christ the Redeemer, beaches and so much more. 
+        </p>
+        <p>
+          In addition to the numerous attractions and activities located in the South Zone of Rio, Rio has much more to offer. From the pitoresc neighborhoods of Santa Teresa to Maracanã Stadium, from Gigoia Island to beautiful art museums, from Samba Schools to Lapa passing through the Royal Gabinet of Literature (one of the most beautiful libraries in the world) and the beaches of Barra da Tijuca.
+        </p>
+        <p>  
+          Important Dates
+          <br/>
+          Paper Submissions due: March 1, 2025
+          <br/>
+          Acceptance Notification: May 1, 2025
+          <br/>  
+          Camera Ready due: June 1, 2025
+        </p>
+        <!-- <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.
         </p>
         <p>
@@ -37,7 +55,7 @@
         </p>
         <p>
           Nulla tincidunt dictum nulla, in cursus ex vestibulum ut. Maecenas consequat eget tortor ac pellentesque. Morbi nibh tortor, tincidunt quis mollis eget, placerat in erat. Sed ultrices dictum nibh id efficitur. Donec sit amet vulputate ante. Phasellus dapibus dignissim elit. Nunc id vestibulum sem. Suspendisse potenti. 
-        </p>
+        </p> -->
       </div>
     </div>
   </div>
