adicionando conteudo da pagina venue e travel

--- a/venue-e-travel.html
+++ b/venue-e-travel.html
@@ -21,18 +21,8 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1836.6307668795944!2d-43.18906184590071!3d-22.977408328910535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bd547345cd851%3A0xdfbcb038384c36a1!2sRio%20Othon%20Palace!5e0!3m2!1spt-BR!2sbr!4v1715032702302!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="text pl-2">
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.
-        </p>
-        <p>
-          Proin vel sodales purus. Ut id tempus sem. Morbi elit metus, lacinia sodales sodales quis, dapibus non nisl. Etiam sodales vehicula erat, ut molestie quam scelerisque aliquam. Aenean sodales in est a imperdiet. Donec dapibus nec nisi non imperdiet. Nulla tempor nibh in felis consequat, nec iaculis sem sodales. Fusce id ultricies nulla. Phasellus magna odio, sodales ut lorem vel, pretium vehicula dolor. Vestibulum bibendum mollis egestas. Vivamus in risus nec risus posuere semper. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec et justo sapien. Curabitur ante sapien, cursus ac pretium eu, accumsan a augue. Cras malesuada ut enim vel lacinia. Nulla lacinia iaculis justo, vel malesuada orci posuere ut.
-        </p>
-        <p>
-          Nullam in odio magna. Ut felis dui, aliquet in congue ac, auctor eget dui. Integer leo augue, iaculis quis tempus vel, convallis quis sem. Duis ac tellus nulla. Aliquam at quam non risus sagittis laoreet nec sit amet nunc. Vestibulum sit amet iaculis risus. Vivamus sed laoreet tellus. Aliquam metus tortor, pulvinar nec augue accumsan, sodales vestibulum erat. Vivamus et tortor erat. Vivamus sed vulputate est, a pharetra ante. Sed scelerisque facilisis lacus a facilisis.
-        </p>
-        <p>
-          Nulla tincidunt dictum nulla, in cursus ex vestibulum ut. Maecenas consequat eget tortor ac pellentesque. Morbi nibh tortor, tincidunt quis mollis eget, placerat in erat. Sed ultrices dictum nibh id efficitur. Donec sit amet vulputate ante. Phasellus dapibus dignissim elit. Nunc id vestibulum sem. Suspendisse potenti. 
-        </p>
+        <p>The conference will be held at the Rio Othon Palace Hotel, overlooking the world-famous Copacabana Beach.</p>
+        <p>Nestled on the iconic Copacabana beachfront, the Rio Othon Palace Hotel offers guests the privilege of experiencing one of Rio de Janeiro's most captivating and celebrated postcards.</p>
       </div>
       <!-- <img id="hotelOthonFotos" src="assets/others/othonPalace.png" alt="Othon Palace"> -->
       <div class="bento">
@@ -62,11 +52,25 @@
       </div>
       <div class="col">
         <h2>Coming from Santos Dummont Airport</h2>
-        <p class="text pl-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.</p>
+        <p class="text pl-2">Possible Route:</p>
+        <p class="text pl-2">
+          <ul class="listaSemIndicador">
+            <li><p class="text pl-2">Follow Av. Presidente Vargas towards Av. Atlântica.</p></li>
+            <li><p class="text pl-2">Turn right onto Av. Princesa Isabel.</p></li>
+            <li><p class="text pl-2">Continue onto Av. Princesa Isabel until you reach Av. Atlântica.</p></li>
+            <li><p class="text pl-2">Turn left onto Av. Atlântica.</p></li>
+            <li><p class="text pl-2">The Hotel Othon will be on your right.</p></li>
+          </ul>
+        </p>
       </div>
       <div class="col">
         <h2>Coming from Galeão Airport</h2>
-        <p class="text pl-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec convallis lacus. Cras accumsan eu mauris non molestie. Mauris sollicitudin varius risus, sed faucibus mauris pretium a. Aenean sit amet rhoncus mauris, et malesuada felis. Nunc eu risus feugiat, luctus mi a, maximus mi. Pellentesque nibh massa, malesuada et lectus ut, rutrum auctor mi. Aliquam eget accumsan lectus. Vestibulum tristique imperdiet ex, sed finibus erat congue a. Ut ac ipsum dapibus est ultrices vehicula. Sed magna tortor, maximus in accumsan in, euismod et augue. In vel ornare lectus, quis consequat ex. Curabitur id velit elementum justo sollicitudin lobortis. Proin fermentum arcu id sem tristique, vel viverra ligula imperdiet. Mauris placerat eros sem, sed interdum nisl posuere sit amet.</p>
+        <p class="text pl-2">Possible Route:</p>
+        <ul class="listaSemIndicador">
+          <li>
+            <p class="text pl-2">Take the Via Expressa Pres. João Goulart/Linha Vermelha.</p>
+          </li>
+        </ul>
       </div>
 
       <div class="col">
